--- a/lucrare/0-title.tex
+++ b/lucrare/0-title.tex
@@ -50,7 +50,7 @@
 \vspace{0.25cm}
 
 \begin{center}
-\large \textbf{Coordonator științific \\ Titlul și numele profesorului coordonatorului}
+\large \textbf{Coordonator științific \\ Conf.univ.dr.ing. Paul Irofti}
 \end{center}
 
 \vspace{2cm}
