--- a/lucrare/2-preliminarii.tex
+++ b/lucrare/2-preliminarii.tex
@@ -1,6 +1,148 @@
 \chapter{Preliminarii}
 
-\section{Out-of-order Execution \& Instructiuni Tranzitorii}
+\section{Notiuni de Sisteme de Operare}
+
+\subsection{Kernel}
+
+Dupa cum sugereaza si numele, kernel-ul este componenta principala a unui
+sistem de operare, care serveste drept interfata intre hardware si software.
+Kernel-ul indeplineste patru roluri principale in cadrul sistemului de operare:
+
+\begin{itemize}
+  \setlength\itemsep{0em}
+  \item gestionarea eficienta a memoriei de pe sistem
+  \item programarea proceselor pe \emph{CPU}
+  \item gestioneaza driverele de hardware, astfel actionand ca un mediator intre
+    hardware si restul proceselor
+  \item comunica cu restul proceselor prin intermediul unui interfete
+    apelurilor de sistem (SCI)
+\end{itemize}
+
+Codul rulat in Kernel este izolat de restul codului de pe sistem. Acesta
+intreprinde actiuni in mod privilegiat cu drepturi depline de acces asupra
+hardware-ului. Codul obisnuit de pe sistem functioneaza in userland, si ruleaza
+cu acces restrictionat asupra resurselor, avand acces la acestea doar prin
+interfata sigura de comunicare cu Kernel mentionata mai sus (SCI)
+\cite{kernel_redhat}.
+
+% TODO trebuie structurata altfel partea de preliminarii. nu imi place deloc
+% modul in care e organizat
+% TODO fa zona asta mai coeziva (duplicate cred)
+
+\subsection{Race Condition / Intrecere la rulare}
+
+Un \emph{race-condition} apare la nivel de cod in momentul in care functionarea
+corecta a unui program depinde de ordinea de executie sau de sincronizarea
+temporala a mai multor fire de executie paralele (\emph{thread-uri}, sau
+procese). In general aceste situatii apar in cazul in care firele de executie
+vizeaza simultan o resursa comuna. Pentru evitarea bug-urilor in aceste
+situatii, secventele operatii executate asupra resursei comune, numite
+zone critice, trebuie executate intr-un mod reciproc exclusiv.
+
+% TODO ref executie speculativa after redo
+La nivel microarhitectural pot aparea \emph{race-condition-uri} in timpul
+executiei speculative in urma carora pot aparea efecte
+secundare exploatabile.
+
+\subsection{IPC} 
+
+\emph{Interprocess comunication}, sau \emph{IPC} face referire la mecanismele
+puse la dispozitie de sistemul de operare pentru comunicarea intre procese si
+gestionarea datelor comune. Principalele metode folosite in practica si amintite in
+aceasta lucrare sunt:
+\begin{itemize}
+  \setlength\itemsep{0em}
+  \item Fisiere. Comunicarea prin intermediul unor fisiere accesibile tuturor
+    proceselor implicate.
+  \item Semnale. Mesaje transmise de la un proces la altul, in general sub
+    forma de instructiuni, corespunzand unui protocol stabilit anterior.
+  \item Memorie partajata. Bloc de memorie la care au acces mai multe procese
+    si prin intermediul caruia pot comunica.
+\end{itemize}
+
+\subsection{Exceptii de sistem}
+
+O exceptie reprezinta o schimbare brusca in rularea programului ca raspuns la o
+schimbare brusca in starea procesorului. Exemple de exceptii la nivel de
+aplicatie ar fi: cereri de alocare a memoriei pe heap, cereri de input/output,
+incercari de impartire cu $0$, incercari de accesare a memoriei in afara
+limitelor impuse de memoria virtuala dedicata procesului, etc. Exceptiile se
+impart in mai multe categorii: \emph{interrupts}, \emph{traps}, emph{faults},
+\emph{aborts}. Categoria care va fi adusa in discutie in prezenta lucrare este
+cea de-a treia, \emph{faults}. Defectele (\emph{faults}), sunt erori (posibil
+recuperabile de catre sistemul de operare) cauzate de o aplicatie (eg.
+accesarea unei zone de memorie asupra careia programul nu are drepturile
+necesare --- \emph{segmentaion fault} ---, accesarea unei unor date care nu
+sunt incarcate in memorie --- \emph{page fault}) \cite{exception_processes}.
+
+\subsection{Procese}
+
+Procesul reprezinta cea mai primitiva unitate de alocare a resurselor de sistem
+si este o instanta activa a unui program \cite{processes}. Programul in acest
+caz nu este nimic mai mult decat un fisier executabil stocat pe masina. Un
+program nu poate rula decat in contextul unui proces, care consta in id-ul
+procesului (\emph{PID}), spatiul de adrese (\emph{TEXT, DATA, STACK, HEAP, BSS,
+etc}), starea procesului (starea registrilor), etc. \cite{exception_processes}.
+Procesele sunt izolate intre ele, fiecare avand dedicat spatiul sau propriu de
+adrese virtuale de memorie. Implicit procesele nu impart resurse intre ele, dar
+pot comunica intre ele partajand resurse in mod intentionat cand acest obiectiv
+este de dorit.
+
+
+\subsection{Memorie Virtuala}
+
+Procesoarele folosesc adrese virtuale de memorie si un mecanism de traducere a
+acestora in adrese fizice pentru a asigura izolarea si separarea proceselor
+intre ele. Fiecare zona de memorie virtuala este impartita in multiple pagini
+(cea mai comuna dimensiune este de 4096 de bytes). Fiecare pagina virtuala este
+mapata prin intermediul tabelelor de traducere a paginilor (\emph{translattion
+table}), catre corespondentul fizic. In procesor exista un registru dedicat pentru 
+retinerea tabelului de traducere utilizat la un moment dat si care se schimba la 
+fiecare schimbare de context. In consecinta, ficare proces isi poate accesa doar 
+zona sa virtuala de memorie. \\
+
+Tabelele de traducere mai au si rolul de a asigura separarea intre zona de memorie
+dedicata utilizatorului si zona de memorie dedicate kernel-ului in cadrul fiecarui
+proces. In timp ce zona de memorie deicata utilizatorului poate fi accesata de 
+aplicatia care ruleaza in procesul curet, zona de kernel poate fi accesata doar
+prin intermediul unui utilizator privlegiat. Restrictiile acestea sunt precizate
+in tablele de traducere, iar respectarea acestora este asigurata de sistemul de 
+operare. Mai este important de notat faptul ca zona pentru kernel in general mapeaza
+intreaga memorie fizica din cauza necesitatii de executie a diverselor operatii 
+asupra acesteia (eg. scriere, sau citire de date).\\
+
+Pe parcursul acestei lucrari vor fi expuse atacuri prin care limitele impuse de
+tablele de traducere au fost ocolite, putandu-se accesa zona de kernel, si
+implicit toata memoria fizica din postura unui utilizator neprivilegiat,
+cat si accesul nepermis in zone de memorie ale altor procese, prin intermediul
+unor pagini partajate.
+
+\section{Notiuni de Arhitectura Sistemelor de Calcul}
+
+\subsection{SMAP si SMEP}
+
+SMAP si SMEP sunt doua caracteristici cu roluri in securizarea sistemelor prin
+izolarea mai buna a Kernel-ului de spatiul utilizatorului (\emph{userland}).
+Acestea sunt implementate in cadrul memoriei virtuale si activate prin setarea
+bitilor corespunzatori ($20$ si $21$) din registrul \texttt{CR4} pe arhitectura
+\emph{Intel}).
+
+\emph{SMAP} este o caracteristica care presupune restrictia accesului asupra
+anumitor zone de memorie din \emph{userland} in modul de executie Kernel. In
+timp ce mecanismul de protectie este activat, incercarea de acces a zonelor
+protejate va duce la declansarea unei exceptii. Rolul SMAP este de impiedica
+programele malitioase din a manipula Kernelul sa acceseze instructiuni, sau
+date nesigure din spatiul utilizatorului \cite{smap}.
+
+SMEP este o caracteristica implementata cu scopul de a complementa SMAP. Are
+rolul de a preveni executia neintentionata a unor fragmente de cod in spatiul 
+user-ului, prin restrictiunatrea dreptului de executie asupra acestora. Diverse
+atacuri precum cele de tipul \emph{Priviledge-Escalation} pot fi prevenite 
+datorita acestor caracteristici.
+
+\subsection{Out-of-order Execution \& Instructiuni Tranzitorii}
+
+% TODO redo this
 
 In trecut procesoarele executau instructiunile in ordinea in care acestea erau
 preluate de la compilator, cate una pe rand. In multe situatii instructiuni mai
@@ -11,57 +153,77 @@ Procesoarele moderne se folosesc de o serie de tehnici grupate sub umbrela
 Tomasulo in 1967 \cite{tomasulo1967} care permitea programarea dinamica
 a ordinii instructiunilor si alocarea acestora pe mai multe unitati de executie
 care ruleaza in paralel. Scopul acestei tehnici este utilizarea exhaustiva a
-resurselor disponibile pe procesor, pentru cresterea performantei. 
+resurselor disponibile pe procesor, pentru cresterea performantei. Datorita
+beneficiilor aduse, \emph{Out-of-order Execution} a devenit o caracteristica
+indispensabila a sistemelor moderne de procesare.
 
-Aceasta optimizare duce la situatii in care unele instructiuni executate trebuie 
-respinse, iar starea programului intoarsa la una anterioara (din cauza decansarii 
-unei exceptii in urma accesarii unei zone de memorie interzisa de exemplu). Aceste 
-tipuri de instructiuni numite in continuare \emph{Instructiuni Tranzitorii} stau la 
-baza atacului \emph{Meltdown} \cite{meltdown2018}.
-
-
-\section{Branch Prediction \& Executie Speculativa}
-
-Pe baza \emph{Branch Processing Unit} (\emph{BPU}) din interiorul procesoarelor
-moderne incearca sa prezica, in cazul unei ramificari (\emph{if}), sau final de
-iteratie (\emph{for, while}), ramura corecta pe care va fi urmata. In cazul in
-care fluxul de executie stagneaza la un astfel punct de bifurcare (de exemplu,
-in asteptarea incarcarii din memorie a valorii unei variabile), se poate folosi
-prezicerea data de \emph{BPU} pentru a executa speculativ instructiunile
-urmatoare. Dupa ce executia instructiunii care decide bifurcarea este finalizata
-rezultatele obtinute speculativ sunt fie pastrate fie respinse \cite{spectre2019}.
-
-Branch prediction are in general o acuratete foarte ridicata, chiar de peste $95\%$ \cite{what_is_speculative_execution}, asadar executand speculativ s-au obtinut
-imbunatatiri considerabile de performanta. Cu toate acestea, in cazurile in care
-ramura de executie nu este prezisa corect, se vor executa instructiuni care nu ar
-fi avut loc in cadrul executie secventiale, \emph{in-order execution}. Bineinteles,
-aceste instructiuni vor fi \emph{rolled-back}, iar rezultatul final va fi cel asteptat,
-dar la nivel micro-arhitectural se pot observa si masura niste efecte neprevazute ale
-acestor instructiuni executate \emph{out-of-order}. Analizarea cu grija a acestor efecte
-secundare sta la baza atacurilor de tip \emph{Spectre} \cite{spectre2019}.
+Aceasta optimizare duce la situatii in care unele instructiuni executate
+trebuie respinse, iar starea programului resetata la una anterioara (din cauza
+decansarii unei exceptii in urma accesarii unei zone de memorie interzisa de
+exemplu). Aceste tipuri de instructiuni numite in continuare \emph{Instructiuni
+Tranzitorii} stau la baza atacului \emph{Meltdown} \cite{meltdown2018}.
 
 
-\section{CPU Cache}
+\subsection{Branch Prediction \& Executie Speculativa}
+\label{sec:branch_prediction}
 
-Deoarece incarcarea valorilor din memoria RAM in cpu este foarte costisitoare, in 
-cadrul procesoarelor exista niste zone de memorie foarte rapide, de dimensiuni reduse, 
-ce poarta denumirea de emph{cache-uri}. Acestea retin valorile folosite cel mai des 
-intr-un anumit interval de timp. Prin retinerea si citirea valorilor din cache,
-se mascheaza incarcarea initial relativ lenta si se castiga timp pretios de executie.
+\emph{Branch Processing Unit} (\emph{BPU}) din interiorul procesoarelor moderne
+incearca sa prezica, in cazul unei ramificari a fluxului de executie (de
+exemplu o structura decizionala -- \emph{if}), sau final de iteratie
+(\emph{for, while}), ramura corecta care va fi urmata. In cazul in care fluxul
+de executie stagneaza la un astfel punct de bifurcare (de exemplu, in
+asteptarea incarcarii din memorie a valorii unei variabile), instructiunile
+urmatoare se vor executa speculativ, urmand ramura prezisa de \emph{BPU}. Dupa
+ce executia instructiunii care decide ramura corecta a executiei, rezultatele
+obtinute speculativ sunt fie pastrate (caz in care se castiga timp de rulare pretios) fie respinse, caz in care se revine la o stare anterioara. \cite{spectre2019}. \\
 
+Branch prediction are in general o acuratete foarte ridicata, chiar de peste
+$95\%$ \cite{what_is_speculative_execution}, asadar executand speculativ s-au
+obtinut imbunatatiri considerabile de performanta. Cu toate acestea, in
+cazurile in care ramura de executie nu este prezisa corect, se vor executa
+instructiuni care nu ar fi avut loc in cadrul executie secventiale,
+\emph{in-order execution}. Bineinteles, aceste instructiuni vor fi
+\emph{rolled-back}, iar rezultatul final va fi cel asteptat, dar la nivel
+micro-arhitectural se pot observa si masura niste efecte secundare neprevazute
+ale acestor instructiuni executate \emph{out-of-order}. Analizarea cu grija a
+acestor efecte secundare sta la baza atacurilor de tip \emph{Spectre}
+\cite{spectre2019}.
 
-\subsection{Atacuri asupra memoriei cache}
+\subsection{CPU Cache}
+
+Deoarece incarcarea valorilor din memoria RAM in CPU este foarte costisitoare,
+in cadrul procesoarelor exista o ierarhie de zone de memorie foarte rapide,
+separate in linii de dimensiuni mici (de obicei intre 16 si 128 de bytes), ce
+poarta denumirea de emph{cache-uri} \cite{caching}. Dupa prima accesare a unei
+adrese din memorie, valoarea obtinuta este retinuta in cache. Astfel, la
+accesari ulterioare ale aceleiasi zone de memorie, timpul in care valoarea este
+incarcata este redus semnificativ. In final, prin citiri repetate ale valorilor
+din cache, se mascheaza incarcarea initiala din memorie, semnificativ mai
+lenta, si se castiga timp pretios de executie. Cache-urile sunt de obicei
+partajate intre nucleele unui procesor, optimizandu-se astfel si performanta
+multi-core.
+
+\section{Notiuni de Securitate}
+
+\subsection{Atacuri asupra memoriei cache}\label{sec:atacuri_cache}
+
+%TODO scoate exemplu din paper-ul cu missing the cache for fun and profit
 
 Deoarece memoria cache este mult mai rapida, prin intermediul unui ceas de mare precizie
 putem distinge intre accesare din memorie si accesarea din \emph{cache} a unei variabile.
-Sa consideram urmatorul exemplu:
+Sa consideram urmatoarea secventa de cod:
 
 \begin{lstlisting}[language=c]
   uint32_t value = 10;
-  addr = &value;
+  addr = &secret; // adresa secretului
+  /* valoare irelevanta.
+     folosita ca referinta pentru cronometru
+     static -> important pentru a preveni optimizarea
+     in moduri nedorite */
+  static int junk = 0; 
 
   time = __rdtscp(&junk);
-  junk = *addr;
+  junk = *addr; \label{code:junk_flush_reload}
   // prima accesare din memorie
   memory_time = __rdtscp(&junk) - time;
 
@@ -72,20 +234,117 @@ Sa consideram urmatorul exemplu:
   cache_time = __rdtscp(&junk) - time;
 \end{lstlisting}
 
+% TODO listing-ul acesta cred ca trebuie mutat la implementarea atacului sau idk
 
-Timpul de accesare al valorii corespunzatoare variabilei \textbf{value} poate
+Timpul de accesare al valorii corespunzatoare variabilei \texttt{value} poate
 fi calculat utilizand instructiunea \texttt{\_\_rdtscp} specifica procesoarelor
 Intel. Aceasta permite citirea \emph{time-stamp counter-ului} din procesor
 \cite{rdtscp}. Prin doua masuratori ce incadreaza dereferentierea pointer-ului
 catre \texttt{value}, putem masura numarul de ciclii de procesor necesari
-operatiei. Repetand experimentul de $10000$ de ori si calcularea mediei
-timpului de acces pentru fiecare caz, obtin urmatoarele:
+operatiei. Repetand experimentul de $10000$ de ori si calculand media
+timpului de acces pentru fiecare caz, se obtin urmatoarele rezultate:
 
 \begin{itemize}
   \setlength\itemsep{0em}
-  \item incarcarea din memorie dureaza aproximativ $250$ de ciclii
-  \item incarcarea din cache dureaza aproximativ $23$ de ciclii
+  \item incarcarea din memorie dureaza aproximativ $250$ de ciclii si poarta
+    numele de \emph{cache miss}
+  \item incarcarea din cache dureaza aproximativ $23$ de ciclii si poarta
+    numele de \emph{cache hit}
 \end{itemize}
 
-Diferente considerabile precum acestea sunt exploatate in cadrul diferitelor
-tehnici de atac asupra memoriei cache.  % despre side channels & flush & reload
+Aceste diferenta masurabile sunt exploatate in cadrul diferitelor
+tehnici de atac asupra memoriei cache, printre care si \emph{FLUSH and RELOAD}
+care va fi discutat in continuare.
+
+\subsubsection{Observatie}
+
+% TODO as putea face o sectiune separata de preliminarii in care sa mentionez
+% specificatiile sistemului pe car s-au facut toate testele
+Numarul de ciclii de procesor necesari executiei unui set de instructiuni
+difera in functie de sistem. Rezultatele ilustrate anterior sunt specifice unui
+sistem ce ruleaza o versiune actualizata a Kernelului Linux in data de
+22.05.2022 (\texttt{Linux 5.17.9-arch1-1 x86\_64}), cu un procesor al
+producatorului \emph{Intel}, modelul \texttt{i5-8250U} (mai multe specificatii
+pe site-ul producatorului \cite{i5_8250U}), cu 8GB de memorie RAM tip DDR3.
+
+
+% TODO ia in considerare sa mentionezi si din articolul cu cache miss for fun and profit
+% ori aici in preliminarii, ori intr-o sectiune dedicata lui. -> !!!! VB. CU IROFTI
+
+\subsubsection{FLUSH and RELOAD}\label{sec:flush_reload}
+
+O practica comuna de reducere a memoriei utilizate este partajarea intre
+procese a unor pagini comune cu drepturi exclusive de citire
+(\emph{read-only}). \emph{FLUSH and RELOAD} este una dintre tehnicile
+documentate de atac asupra memoriei cache. Scenariul descris in lucrarea de
+cercetare in care a fost introdus atacul este acela al unei victime si al unui
+spion care impart o zona partajata de memorie. Spionul se foloseste de
+instructiunea \texttt{clflush} care invalideaza liniile aferente unei zone de
+memorie din toata ierarhia cache-ului din procesor \cite{clflush}, iar apoi
+asteapta o perioada scurta de timp. In final verifica daca la accesarea zonei
+respective obtine un \emph{cache hit} sau un \emph{cache miss}, astfel afland
+daca victima a accesat sau nu in fereastra respectiva de timp, zona de memorie
+urmarita. Repetand experimentul, s-au putut extrage informatii suficiente
+pentru realizarea unor atacuri de succes asupra implementarii de la vremea
+respectiva a unor algoritmi criptografici (\emph{OpenSSL}, \emph{AES}),
+monitorizarea activitatii unui utilizator, etc. \cite{flush_reload}.
+
+\subsubsection{Alte tipuri de atacuri asupra memoriei cache}
+
+\emph{FLUSH and FLUSH} se aseamana cu \emph{FLUSH and RELOAD}, diferenta 
+constand in faptul ca spionul in loc de a masura timpul de acces a zonei
+tinta, va apela iarasi \texttt{clflush}. Executia mai rapida va corespunde
+unui \emph{cache miss}, iar cea mai rapida unui \emph{cache hit} \cite{cache_attacks}.
+
+\emph{EVICT and RELOAD} foloseste un \emph{eviction set} pentru a elimina din
+cache zona de memorie tinta. Apoi, pentru masurarea timpului se procedeaza 
+identic ca la \emph{FLUSH and RELOAD}. Tehnica se aseamana in eficienta cu 
+cele mentionate anterior \cite{cache_attacks}.
+
+\emph{PRIME + PROBE} consta intr-o abordare diferita. Atacatorul umple toata
+zona partajata din cache (\emph{PRIME}). Victima va elimina valori in carcate
+de atacator in cache in timp ce ruleaza (\emph{evict}). Atacatorul va masura 
+apoi timpul de acces pentru toata zona de cache (\emph{probe}). In cazul in care observa
+un \emph{cache hit}, constata ca victima a accesat zona respectiva \cite{cache_attacks}.
+
+\subsection{Covert-channel}
+
+Utilizarea tehnicilor descrise anterior pentru extragerea diverselor
+informatii, fac ca memoria cache sa devina un \emph{canal secundar} de
+comunicare(\emph{side-channel}), iar atacurile poarta numele de
+\emph{side-channel attacks}. In momentul in care atacatorul controleaza atat
+modul in care este indus efectul secundar cat si modul in care este masurat,
+avem in discutie o subcategorie a atacurilor pe \emph{canal secundar}, mai
+preci atacuri pe \emph{canal ascuns} (\emph{covert-channel}).
+ 
+%TODO e scris ca naiba. vezi pe wikipedia ca zice bine
+
+\subsection{Atacuri Speculative}
+
+Atacurile Speculative se bazeaza pe exploatarea tehnicii de optimizare numita
+\emph{Executie Speculativa} care, datorita avantajelor aduse in performata,
+este utilizata in prezent de majoritatea procesoarelor folosite in prezent.
+Atacurite se folosesc de aceasta optimizare pentru a produce intentionat efecte
+secundare masurabile, cu scopul de a accesa date in mod neautoriazat, prin
+intermediul unor canale secundare (\emph{side channeles}) sau ascunse
+(\emph{covert channels}). In continuarea acestei lucrari voi discuta
+particularitatile si implicatiile catorva atacuri din aceasta clasa care au
+avut un impact semnificativ asupra industriei in ultimii ani.
+
+\subsection{ROP}\label{sec:rop}
+
+\emph{ROP} \cite{shacham2007geometry} este o tehnica prin care un atacator care
+reuseste sa deturneze fluxul normal de instructiuni, poate sa manipuleze
+victima in realizarea unor actiuni complexe. In acest scop, atacatorul executa
+in lant sevente reduse ca dimensiune de instructiuni masina numite
+\emph{gadget-uri}. Gaget-urile sunt prezente si identificate de atacator in
+codul sursa al victimei si se aseamana prin faptul ca realizeaza operatii
+oarecare inaintea executarii unei instrutiuni (sau set de instructiuni) de tip
+\emph{return}. Daca un atacator poate prelua controlul
+\emph{stack-pointer-ului}, atunci poate redirectiona foluxul de instructiunui
+catre un gadget special ales, care la randul lui va ridirectiona fluxul catre
+alt gadget. S-a demonstrat ca un set restrans de gadget-uri poate fi echivalent
+cu un limbaj Turing-Complete \cite{homescu2012microgadgets}. Pe idei preluate
+din \emph{ROP} se bazeaza variante ale clasei de atacuri \emph{Spectre}, care
+apeleaza in mod speculativ \emph{gadget-uri} din spatiul de meomorie al
+victimei.
